[project]
name = "claude-telegram-bridge"
version = "0.1.0"
description = "MCP server that bridges Claude Code to Telegram for async communication"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_telegram_bridge"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[project.scripts]
claude-telegram-bridge = "claude_telegram_bridge.server:main"
